--- a/myPythonNotes.ipynb
+++ b/myPythonNotes.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hey, give me your name... nirosh\n"
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "What is your name? Nirosh\n",
@@ -326,7 +326,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Your name please: Nirosh\n",
@@ -541,7 +541,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hey user, give me your sallary:  40000\n"
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hey user, give me your sallary:  650000\n"
@@ -852,7 +852,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Give me a number 3\n",
@@ -890,7 +890,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Give me a number 5\n",
@@ -906,7 +906,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Give me a number 5\n",
@@ -958,9 +958,612 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56bf45ee",
+   "metadata": {},
+   "source": [
+    "# Lists & Strings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8e68df-e578-492b-b576-fdf23c9faa6b",
+   "id": "f036a760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['Nirosh', 'Shilpa', 'Jimmy']\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ec98147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random = ['Tom', 3.12, True, 5]\n",
+    "print(random)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9114cb5c",
+   "metadata": {},
+   "source": [
+    "## Indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d4919c8",
+   "metadata": {},
+   "source": [
+    "This is how we retrieve information from a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcad1ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting the first element in the names list\n",
+    "\n",
+    "random[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a869723f",
+   "metadata": {},
+   "source": [
+    "# Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1c52de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [13,24,4,56,112,885,2323,765,890,5,12,66,231]\n",
+    "\n",
+    "# Hint: LIST[START:STOP:STEP]\n",
+    "## Default is 0 for start and 1 for step. \n",
+    "\n",
+    "print(numbers[0:3])\n",
+    "print(numbers[1:6])\n",
+    "print(numbers[-1]) # Last number\n",
+    "print(numbers[:6])\n",
+    "print(numbers[11::-1])\n",
+    "print(len(numbers)) # Gives the number of items in the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e28422c",
+   "metadata": {},
+   "source": [
+    "# List Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062b5306",
+   "metadata": {},
+   "source": [
+    "There are LOADS of these..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6edf00f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myEmptyList = []\n",
+    "\n",
+    "myEmptyList.append(11)\n",
+    "\n",
+    "print(myEmptyList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1440061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_2 = [1,2,4,2]\n",
+    "\n",
+    "list_2.remove(2)\n",
+    "\n",
+    "print(list_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f103b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'C', 'D', 'Nirosh', 'X']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_3 = ['Nirosh', 'A', 'C', 'X', 'D']\n",
+    "list_3.sort()\n",
+    "print(list_3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1224e7e",
+   "metadata": {},
+   "source": [
+    "# Strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a10797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myFirstString = 'Hello, this is a course about Python'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de8bcf28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'H'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a4e1250",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, t'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString[0:8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f328d7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 555]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Important: lists vs strings\n",
+    "\n",
+    "numbers = [1,2,3]\n",
+    "numbers[2] = 555\n",
+    "print(numbers)\n",
+    "\n",
+    "# In strings you CANNOT DO THE ABOVE!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdf63d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO, THIS IS A COURSE ABOUT PYTHON'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# There are loads of STRING METHODS\n",
+    "myFirstString.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c7f10a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello, this is a course about python'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0729ba1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, This Is A Course About Python'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc03588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString.find('Python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e434cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STRETCH - Finding the length of the word Python.\n",
+    "counter = 0\n",
+    "for letter in myFirstString[30:]:\n",
+    "    if letter == ' ':\n",
+    "        break\n",
+    "    counter = counter + 1\n",
+    "print(counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e18306f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "myFirstString[30:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bb6cd3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len(myFirstString)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f0c9b79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hlo yhn\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello, Python!\"\n",
+    "\n",
+    "print(text[::2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daae927d",
+   "metadata": {},
+   "source": [
+    "# Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe2413eb",
+   "metadata": {},
+   "source": [
+    "A tuple is an unchangable collection of items!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9af91912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFirstTuple = ()\n",
+    "print(myFirstTuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "90413c53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('StudentA', 98, 'Europe')\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySecondTuple = ('StudentA', 98, 'Europe')\n",
+    "print(mySecondTuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20cfa99f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Pizza', 'Lasagna', 'Fried Rice', 'Mango Lassi', 'Cake')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Task: Create a tuple of your top 5 food and drinks (and print it)...\n",
+    "myFaves = ('Pizza', 'Lasagna', 'Fried Rice', 'Mango Lassi', 'Cake')\n",
+    "myFaves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dd0f9837",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Pizza', 'Lasagna')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myFaves[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "28cd25c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Packing and Unpacking Tuples\n",
+    "user = ('nirosh', 'id03', 'blue')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bffa8f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nirosh\n",
+      "id03\n",
+      "blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unpacking\n",
+    "fname, id, color = user\n",
+    "print(fname)\n",
+    "print(id)\n",
+    "print(color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4a79624a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Try this:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m user[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTom\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# Try this:\n",
+    "user[0] = 'Tom'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "33867f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Pizza', 'Lasagna', 'Fried Rice', 'Mango Lassi', 'Cake')\n",
+      "('Water', 'Rose Milk', 'Coconut Water')\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFaveDrinks = ('Water', 'Rose Milk', 'Coconut Water')\n",
+    "print(myFaves)\n",
+    "print(myFaveDrinks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3d269f19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Water',\n",
+       " 'Rose Milk',\n",
+       " 'Coconut Water',\n",
+       " 'Pizza',\n",
+       " 'Lasagna',\n",
+       " 'Fried Rice',\n",
+       " 'Mango Lassi',\n",
+       " 'Cake')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newFaves = myFaveDrinks + myFaves\n",
+    "newFaves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc287f7c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -968,9 +1571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fastTorch",
+   "display_name": "base",
    "language": "python",
-   "name": "fasttorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
