Added dictionary task and notebook section

--- a/myPythonNotes.ipynb
+++ b/myPythonNotes.ipynb
@@ -1561,9 +1561,574 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc287f7c",
+   "metadata": {},
+   "source": [
+    "# Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65e08b38",
+   "metadata": {},
+   "source": [
+    "Sets are unique colletion of items denoted by {}.\n",
+    "\n",
+    "Sets are unordered!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e9059c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 5, 34, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFirstSet = {2,5,4,5,34}\n",
+    "print(myFirstSet)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc287f7c",
+   "id": "91d0489c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dipti', 'Jimmy', 'Nirosh'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This way is not used often AT ALL\n",
+    "mySecondSet = set(['Nirosh', 'Dipti', 'Jimmy'])\n",
+    "mySecondSet #Notebooks are designed to output the last line by default. Useful for experimentation but not best practise in production!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02216568",
+   "metadata": {},
+   "source": [
+    "Set Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "29c74309",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 5, 34, 333}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myFirstSet.add(333)\n",
+    "myFirstSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "aefd67bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 5, 34, 222, 333, 444, 555}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myFirstSet.update([222,444,555])\n",
+    "myFirstSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "43eafddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myFirstSet.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9cfacd82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questionPerson = {\n",
+    "    'Dipti',\n",
+    "    'Jaimini',\n",
+    "    'Anjumol',\n",
+    "    'Shilpa',\n",
+    "    'Jimmy'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b297b4e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaimini\n",
+      "{'Dipti'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(questionPerson.pop())\n",
+    "print(questionPerson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a91cf97a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Jimmy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Something useful\n",
+    "if 'Jimmy' in questionPerson:\n",
+    "    print('Hello Jimmy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eda99167",
+   "metadata": {},
+   "source": [
+    "## Set Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6c79e05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Union - concatenates both sets\n",
+    "set_A = {1,2,3}\n",
+    "set_B = {3,4,5}\n",
+    "\n",
+    "union_set = set_A | set_B\n",
+    "union_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7081cb86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Intersection - Returns the set with all common items.\n",
+    "intersection_set = set_A & set_B\n",
+    "intersection_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a35f8761",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4, 5}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Difference - Returns the unique items in set B that aren't in set A:\n",
+    "difference_set = set_B - set_A\n",
+    "difference_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a43f7892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3} {3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set_A, set_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac99c8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4, 5}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summetric Difference - Returns values that appear in either one of the sets.\n",
+    "symmetric_output = set_A ^ set_B\n",
+    "symmetric_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a0e1a9c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40, 10, 80, 50, 20, 60, 30]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [10, 20, 30, 20, 10, 50, 60, 40, 80, 50, 40]\n",
+    "\n",
+    "answer = list(set(numbers))\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12370de1",
+   "metadata": {},
+   "source": [
+    "# Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c47ae0",
+   "metadata": {},
+   "source": [
+    "What is a dictionary?\n",
+    "\n",
+    "- An unordered collection of data values stored in key:value pair.\n",
+    "- Each key is unique.\n",
+    "- Values can be duplicated.\n",
+    "- Stretch: Look into Hash Tables or Associative Arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "560cb677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myFirstDict = {\n",
+    "    'Jaimini': 1.5,\n",
+    "    'Dipti': 1.6,\n",
+    "    'Anjumol': 1.75,\n",
+    "    'Shilpa': 1.67,\n",
+    "    'Jimmy': 1.56\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0b772e",
+   "metadata": {},
+   "source": [
+    "you can also use the dict() but this is less common."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "0b7eb93c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.56"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieving Information\n",
+    "myFirstDict['Jimmy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "16451d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jaimini': 1.5,\n",
+       " 'Dipti': 1.6,\n",
+       " 'Anjumol': 1.75,\n",
+       " 'Shilpa': 1.67,\n",
+       " 'Jimmy': 1.56,\n",
+       " 'Nirosh': 1.5}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adding a new entry \n",
+    "myFirstDict['Nirosh'] = 1.5\n",
+    "myFirstDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3b5831c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jaimini': 1.5, 'Dipti': 1.6, 'Anjumol': 1.75, 'Shilpa': 1.67, 'Jimmy': 1.56}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove a key:value pair\n",
+    "del myFirstDict['Nirosh']\n",
+    "myFirstDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "58c7c96e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Jaimini', 1.5), ('Dipti', 1.6), ('Anjumol', 1.75), ('Shilpa', 1.67), ('Jimmy', 1.56)])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Items\n",
+    "myFirstDict.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a2616fc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 2 (1642819124.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[60], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'The learner, {key} has a height of {value}.')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating through a dictionary:\n",
+    "for key, value in myFirstDict.items():\n",
+    "print(f'The learner, {key} has a height of {value}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c3788927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# len()\n",
+    "len(myFirstDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2a09bf42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dipti': {'age': 25, 'expertise': 'science'},\n",
+       " 'Shilpa': {'age': 26, 'expertise': 'maths'}}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nesting Dictionaries\n",
+    "students = {\n",
+    "    \"Dipti\": {\"age\":25, \"expertise\":\"science\"},\n",
+    "    \"Shilpa\": {\"age\":26, \"expertise\":\"maths\"}\n",
+    "}\n",
+    "students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "47f149f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'science'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students['Dipti']['expertise']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a0e38f1",
    "metadata": {},
    "outputs": [],
    "source": []
