--- a/myPythonNotes.ipynb
+++ b/myPythonNotes.ipynb
@@ -4266,6 +4266,64 @@
    "cell_type": "markdown",
    "id": "d2740e57",
    "metadata": {},
+   "source": [
+    "# Coffee Shop Demo (Stretch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "e1d90bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coffee_menu = {\n",
+    "    'flat white':2.99,\n",
+    "    'hot chocolate':3.99,\n",
+    "    'tea':1.99\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a78a748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome! Here are the coffee on the menu...\n",
+      "flat white\n",
+      "hot chocolate\n",
+      "tea\n",
+      "What would you like to drink?\n",
+      "Nice, I will get your TEA\n",
+      "That will be £1.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Welcome! Here are the coffee on the menu...')\n",
+    "for item in coffee_menu:\n",
+    "    print(item)\n",
+    "\n",
+    "choice = input('What would you like to drink?')\n",
+    "\n",
+    "if choice.lower() in coffee_menu.keys():\n",
+    "    print(f'Nice, I will get your {choice}')\n",
+    "    print(f'That will be £{coffee_menu[choice.lower()]}')\n",
+    "else: \n",
+    "    print('Sorry that is not avaialble')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1e4ee7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
