--- a/myPythonNotes.ipynb
+++ b/myPythonNotes.ipynb
@@ -4286,7 +4286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "7a78a748",
    "metadata": {},
    "outputs": [
@@ -4298,9 +4298,7 @@
       "flat white\n",
       "hot chocolate\n",
       "tea\n",
-      "What would you like to drink?\n",
-      "Nice, I will get your TEA\n",
-      "That will be £1.99\n"
+      "Your total bill is 4.98\n"
      ]
     }
    ],
@@ -4309,13 +4307,23 @@
     "for item in coffee_menu:\n",
     "    print(item)\n",
     "\n",
-    "choice = input('What would you like to drink?')\n",
+    "order = 'y'\n",
+    "order_items = []\n",
+    "while order == 'y':  \n",
+    "    choice = input('What would you like to drink?')\n",
+    "    order_items.append(choice.lower())\n",
+    "    order = input('Would you like to order another drink? y/n')\n",
     "\n",
-    "if choice.lower() in coffee_menu.keys():\n",
-    "    print(f'Nice, I will get your {choice}')\n",
-    "    print(f'That will be £{coffee_menu[choice.lower()]}')\n",
-    "else: \n",
-    "    print('Sorry that is not avaialble')"
+    "total = 0\n",
+    "for item in order_items:\n",
+    "    if item.lower() in coffee_menu.keys():\n",
+    "        #print(f'Nice, I will get your {item}')\n",
+    "        #print(f'That will be £{coffee_menu[item.lower()]} for the {item.lower()}')\n",
+    "        total += coffee_menu[item.lower()]\n",
+    "    else: \n",
+    "        print('Sorry that is not avaialble')\n",
+    "        \n",
+    "print(f'Your total bill is {total}')"
    ]
   },
   {
